[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/button/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/button/bg_press.png" type="Texture" id=4]
[ext_resource path="res://menu/lobby-menu/ui/ui.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/chat/chat.tscn" type="PackedScene" id=6]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 1366.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 70 )

[node name="exit" type="Button" parent="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer/btn"]
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer/btn"]
margin_top = 26.0
margin_right = 100.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 1262.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="battle_button" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer/CenterContainer"]
margin_left = 454.0
margin_top = 5.0
margin_right = 704.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 70 )

[node name="battle_button" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer/CenterContainer/battle_button"]
modulate = Color( 0.619608, 0.180392, 0.180392, 1 )
margin_right = 250.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer/CenterContainer/battle_button"]
margin_top = 15.0
margin_right = 250.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 3 )
text = "Battle"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1266.0
margin_right = 1366.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 84.0
margin_right = 1366.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="player_slot" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_right = 190.0
margin_bottom = 716.0
rect_min_size = Vector2( 190, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/player_slot"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/player_slot"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/player_slot/VBoxContainer"]
margin_right = 190.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Fleet"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/player_slot/VBoxContainer"]
margin_top = 32.0
margin_right = 190.0
margin_bottom = 716.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_slots" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/player_slot/VBoxContainer/ScrollContainer"]
margin_right = 190.0
size_flags_horizontal = 3

[node name="chat" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 194.0
margin_right = 1366.0
margin_bottom = 716.0

[node name="exit_timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer/btn/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/PanelContainer/HBoxContainer/CenterContainer/battle_button/battle_button" to="." method="_on_battle_button_pressed"]
[connection signal="timeout" from="exit_timer" to="." method="_on_exit_timer_timeout"]
